# jetstream

./: .dockerignore  .gitignore  0_create_caches.sh  1_run_test_simulation.sh  Analyze Multiple Simulations-Copy1.ipynb  Analyze Multiple Simulations.ipynb  Analyze Single Simulation.ipynb  Dockerfile  MANIFEST.in  QCDOU_Validation.ipynb  README.md  Run Multiple Simulations.ipynb  Single_simulation_analysis.ipynb  constraints.txt  contibuting.md  default_metrics.toml  experiments  mypy.ini  platform_config.toml  pyproject.toml  requirements.in  requirements.txt  run_jetstream_in_docker.sh  setup.py  test_requirements.in  test_requirements.txt  tox.ini
.circleci/: config.yml
.github/workflows/: build-and-deploy.yml  detect-possible-breaking-change.yml
configs/: example_config.toml
docs/: adding_new_platform_guide.md  adr-0001-publishing_metric_docs.md  adr-0002-publishing_statistics_with_analysis_basis.md  adr-0003-discrete_metrics_table_structure.md  adr-0003-moving-metrics-out-of-mozanalysis  analysis-steps.graphml  cirrus.graphml  proposal-0001-flexible_handling_of_exposure_events.md  proposal-0002-moving-metrics-out-of-mozanalysis.md  proposal-0003-moving-configs-into-metric-hub.md  proposal-0004-jetstream-preview.md  proposal-0005-jetstream-tooling-versioning.md  proposal-0006-outcomes-with-analysis-periods.md  proposal-0007-discrete_metric_execution.md  proposal-0008-daily_metric_aggregations.md  proposal-0008-infra_updates.md
jetstream/: __init__.py  _version.py  analysis.py  argo.py  artifacts.py  bigquery_client.py  cli.py  config.py  default_config.py  dryrun.py  errors.py  experimenter.py  export_json.py  exposure_signal.py  external_config.py  inflight.py  metadata.py  metric.py  nimbus.py  outcomes.py  platform.py  pre_treatment.py  preview.py  probe_sets.py  probeinfo.py  segment.py  statistics.py  util.py  validation.py
jetstream/config/: cfr_metrics.toml  default_metrics.toml  fenix.toml  firefox-suggest-offline-vs-online.toml  firefox_ios.toml
jetstream/diagnostics/: resource_profiling_plugin.py  task_monitoring_plugin.py  task_profiler.py
jetstream/logging/: __init__.py  bigquery_log_handler.py
jetstream/tests/: conftest.py  test_analysis.py  test_argo.py  test_artifacts.py  test_bigquery_client.py  test_cli.py  test_config.py  test_experimenter.py  test_exposure_signal.py  test_external_config.py  test_metadata.py  test_metric.py  test_nimbus.py  test_pretreatment.py  test_probe_sets.py  test_probeinfo.py  test_statistics.py
jetstream/tests/data/: Metadata_v1.0.json  NimbusExperiment_v1.0.json  Statistics_v1.0.json  default_metrics.toml  test_clients_daily.ndjson  test_clients_last_seen.ndjson  test_events.ndjson  wine.data
jetstream/tests/integration/: conftest.py  test_analysis_integration.py  test_bigquery_client.py  test_cli.py  test_config_integration.py  test_default_configs.py  test_experimenter_api.py  test_external_config_integration.py  test_featureresolver_integration.py  test_logging_integration.py  test_nimbus_integration.py  test_probe_sets_integration.py  test_probeinfo_integration.py
jetstream/workflows/: rerun.yaml  rerun_config_changed.yaml  run.yaml  run_template.yaml
pensieve/: __init__.py  _version.py  analysis.py  cli.py  config.py  default_metrics.toml  experimenter.py  export_json.py  external_config.py  pre_treatment.py  statistics.py
pensieve/config/: default_metrics.toml
pensieve/tests/: conftest.py  test_analysis.py  test_analysis_integration.py  test_cli.py  test_config.py  test_experimenter.py  test_external_config.py  test_pretreatment.py  test_statistics.py
pensieve/tests/data/: get_key.sql  test_clients_daily.ndjson
pensieve/tests/integration/: conftest.py  test_analysis_integration.py  test_external_config_integration.py
script/: entrypoint  jetstream-dryrun.js  run_experiment_analysis  update_deps
workflows/: rerun.yaml  run.yaml
